{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 97,
  "lineage": "c2554912-bf01-4448-e317-eafa6fa3700a",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "infra_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/infra-nsg",
            "location": "centralindia",
            "name": "infra-nsg",
            "resource_group_name": "homelab-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Outbound",
                "name": "AllowInternetOutbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyAllOutbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "homelab",
              "managed-by": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ingress_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/ingress-nsg",
            "location": "centralindia",
            "name": "ingress-nsg",
            "resource_group_name": "homelab-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "AllowInternetInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Outbound",
                "name": "AllowInternetOutbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyAllOutbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "homelab",
              "managed-by": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "system_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/system-nsg",
            "location": "centralindia",
            "name": "system-nsg",
            "resource_group_name": "homelab-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "AllowInternetInbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Outbound",
                "name": "AllowInternetOutbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "123",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowNTPOutbound",
                "priority": 110,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowDNSOutbound",
                "priority": 115,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyAllOutbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "homelab",
              "managed-by": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "user_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/user-nsg",
            "location": "centralindia",
            "name": "user-nsg",
            "resource_group_name": "homelab-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Outbound",
                "name": "AllowInternetOutbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "123",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowNTPOutbound",
                "priority": 110,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyAllOutbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "homelab",
              "managed-by": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/infra-subnet",
            "name": "infra-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "homelab-rg",
            "virtual_network_name": "homelab-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/ingress-subnet",
            "name": "ingress-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "homelab-rg",
            "virtual_network_name": "homelab-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "system",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/system-subnet",
            "name": "system-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "homelab-rg",
            "virtual_network_name": "homelab-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/user-subnet",
            "name": "user-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "homelab-rg",
            "virtual_network_name": "homelab-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "infra_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/infra-subnet",
            "network_security_group_id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/infra-nsg",
            "subnet_id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/infra-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.networking.azurerm_network_security_group.infra_nsg",
            "module.networking.azurerm_subnet.infra",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ingress_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/ingress-subnet",
            "network_security_group_id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/ingress-nsg",
            "subnet_id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/ingress-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.networking.azurerm_network_security_group.ingress_nsg",
            "module.networking.azurerm_subnet.ingress",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "system_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/system-subnet",
            "network_security_group_id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/system-nsg",
            "subnet_id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/system-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.networking.azurerm_network_security_group.system_nsg",
            "module.networking.azurerm_subnet.system",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "user_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/user-subnet",
            "network_security_group_id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/user-nsg",
            "subnet_id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/user-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.networking.azurerm_network_security_group.user_nsg",
            "module.networking.azurerm_subnet.user",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3c5c740c-bced-4e20-a802-2472fdc008bc",
            "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet",
            "location": "centralindia",
            "name": "homelab-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "homelab-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/system-subnet",
                "name": "system-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/system-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/user-subnet",
                "name": "user-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/user-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.4.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/infra-subnet",
                "name": "infra-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/infra-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.5.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/virtualNetworks/homelab-vnet/subnets/ingress-subnet",
                "name": "ingress-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/0bd15f09-7a90-4a0d-94fa-02214d90dea9/resourceGroups/homelab-rg/providers/Microsoft.Network/networkSecurityGroups/ingress-nsg"
              }
            ],
            "tags": {
              "environment": "homelab",
              "managed-by": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}